--- a/xxl-sso-server/src/main/resources/application.properties
+++ b/xxl-sso-server/src/main/resources/application.properties
@@ -14,5 +14,11 @@ spring.freemarker.request-context-attribute=request
 spring.freemarker.settings.number_format=0.##########
 
 ### xxl-sso
-xxl.sso.redis.address=redis://127.0.0.1:6379
+xxl.sso.redis.address=redis://:Dao%2fbang!%40%23%242020%7e@127.0.0.1:6379
 xxl.sso.redis.expire.minute=1440
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db-fusion-wb
+spring.datasource.username=root
+spring.datasource.password=Dao/bang!@#$2020~
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
