--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,21 @@
         </developer>
     </developers>
 
+    <!-- 发布maven私服 -->
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <name>upload to releases</name>
+            <url>http://47.92.123.170:8081/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>upload to snapshots</name>
+            <url>http://47.92.123.170:8081/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+
     <profiles>
 
         <profile>
