--- a/xxl-sso-samples/xxl-sso-token-sample-springboot/src/main/resources/application.properties
+++ b/xxl-sso-samples/xxl-sso-token-sample-springboot/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.context-path=/xxl-sso-token-sample-springboot
 xxl.sso.server=http://xxlssoserver.com:8080/xxl-sso-server
 xxl.sso.logout.path=/logout
 xxl-sso.excluded.paths=
-xxl.sso.redis.address=redis://127.0.0.1:6379
+xxl.sso.redis.address=redis://:Dao%2fbang!%40%23%242020%7e@127.0.0.1:6379
