1. 添加打印信息到控制台，方便追踪bug 2. 添加获取角色信息逻辑。

--- a/xxl-sso-server/src/main/resources/application.properties
+++ b/xxl-sso-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ### web
-server.port=8080
+#server.port=8080
+server.port=8291
 server.context-path=/xxl-sso-server
 
 ### resources
@@ -14,11 +15,15 @@ spring.freemarker.request-context-attribute=request
 spring.freemarker.settings.number_format=0.##########
 
 ### xxl-sso
-xxl.sso.redis.address=redis://:Dao%2fbang!%40%23%242020%7e@127.0.0.1:6379
+#xxl.sso.redis.address=redis://:Dao%2fbang!%40%23%242020%7e@127.0.0.1:6379
+xxl.sso.redis.address=redis://:Redis!%40%23%242020%7e@47.92.123.170:6379
 xxl.sso.redis.expire.minute=1440
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db-fusion-wb
-spring.datasource.username=root
-spring.datasource.password=Dao/bang!@#$2020~
+#spring.datasource.url=jdbc:mysql://localhost:3306/db-fusion-wb
+#spring.datasource.username=root
+#spring.datasource.password=Dao/bang!@#$2020~
+spring.datasource.url=jdbc:mysql://47.92.123.170:3306/db-fusion-wb?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
+spring.datasource.username=db-fusion-wb
+spring.datasource.password=Db@wb2020
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
