关闭 springboot banner 和 mybatis-plus banner

--- a/xxl-sso-server/src/main/resources/application.properties
+++ b/xxl-sso-server/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+### \u5173\u95ED springboot banner
+spring.main.banner-mode=off
+
+### \u5173\u95ED mybatis-plus banner
+mybatis-plus.global-config.banner=false
+
 ### web
 #server.port=8080
 server.port=8291
