--- a/xxl-sso-server/src/main/resources/application.properties
+++ b/xxl-sso-server/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8291
 server.context-path=/xxl-sso-server
 
 ### resources
-spring.mvc.static-path-pattern=/**
+spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 
 ### freemarker
